wikinav2: Wordmark font stuck in arial when wiki nav enabled (bugid:12833)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@43174 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_typography.scss
+++ b/skins/oasis/css/core/_typography.scss
@@ -8,7 +8,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-cpmono {
+	#WikiHeader .wordmark, .font-cpmono {
 		font-family: "CPMono_v07Bold";
 	}
 }
@@ -22,7 +22,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-fontin {
+	#WikiHeader .wordmark, .font-fontin {
 		font-family: "FontinSansBold";
 	}
 }
@@ -36,7 +36,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-garton {
+	#WikiHeader .wordmark, .font-garton {
 		font-family: "GartonMedium";
 	}
 }
@@ -50,7 +50,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-idolwild {
+	#WikiHeader .wordmark, .font-idolwild {
 		font-family: "IdolwildRegular";
 	}
 }
@@ -64,7 +64,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-imfell {
+	#WikiHeader .wordmark, .font-imfell {
 		font-family: "IMFELLDWPicaPRORegular";
 	}
 }
@@ -78,7 +78,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-josefin {
+	#WikiHeader .wordmark, .font-josefin {
 		font-family: "JosefinSansStdLight";
 	}
 }
@@ -92,7 +92,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-megalopolis {
+	#WikiHeader .wordmark, .font-megalopolis {
 		font-family: "MEgalopolisExtraRegular";
 	}
 }
@@ -106,7 +106,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-orbitron {
+	#WikiHeader .wordmark, .font-orbitron {
 		font-family: "OrbitronMedium";
 	}
 }
@@ -120,7 +120,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-pixiefont {
+	#WikiHeader .wordmark, .font-pixiefont {
 		font-family: "PixieFontRegular";
 	}
 }
@@ -134,7 +134,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-prociono {
+	#WikiHeader .wordmark, .font-prociono {
 		font-family: "ProcionoRegular";
 	}
 }
@@ -148,7 +148,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-tangerine {
+	#WikiHeader .wordmark, .font-tangerine {
 		font-family: "TangerineRegular";
 	}
 }
@@ -162,7 +162,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-titillium {
+	#WikiHeader .wordmark, .font-titillium {
 		font-family: "TitilliumText22LRegular";
 	}
 }
@@ -176,7 +176,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-veggieburger {
+	#WikiHeader .wordmark, .font-veggieburger {
 		font-family: "VeggieburgerBold";
 	}
 }
@@ -190,7 +190,7 @@ $wordmark-font: get_command_line_param("wordmark-font", "default");
 		font-weight: normal;
 		font-style: normal;
 	}
-	.WikiHeader .wordmark, .font-yanone {
+	#WikiHeader .wordmark, .font-yanone {
 		font-family: "YanoneKaffeesatzRegular";
 	}
 }
